infrastructure/gateway/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jenkins-2026-gateway
  namespace: gateway-infra
spec:
  gatewayClassName: gke-l7-gxlb # GKE Global L7 external Load Balancer class
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        options:
          # Link to GKE managed wildcard certificate map configured in bootstrap
          networking.gke.io/certmap: jenkins-2026-cert-map
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
