infrastructure/gateway/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platform-routes
  namespace: gateway-infra
spec:
  parentRefs:
    - name: jenkins-2026-gateway
      namespace: gateway-infra
      sectionName: https
  hostnames:
    - "jenkins.jenkins2026.nubenetes.com"
    - "headlamp.jenkins2026.nubenetes.com"
  rules:
    # Rule 1: Redirect / route to jenkins
    - matches:
        - headers:
            - name: Host
              value: "jenkins.jenkins2026.nubenetes.com"
      backendRefs:
        - name: jenkins
          namespace: jenkins
          port: 8080
    
    # Rule 2: Redirect / route to headlamp
    - matches:
        - headers:
            - name: Host
              value: "headlamp.jenkins2026.nubenetes.com"
      backendRefs:
        - name: headlamp
          namespace: headlamp
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: gateway-infra
spec:
  parentRefs:
    - name: jenkins-2026-gateway
      namespace: gateway-infra
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
